--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ code {
 
 .navFlex{
   display:flex;
+  flex-direction: row;
   justify-content: space-around;
   margin: 0em;
   padding: 2em;
@@ -21,9 +22,81 @@ code {
   border: 0.5em solid aqua;
 }
 
+@media only screen and (max-width: 600px){
+  .navFlex{
+    flex-direction: column;
+  }
+}
+
 .link{
   color: aqua;
   text-decoration: none;
   border: 0.1em solid aqua;
   padding: 0.2em 0.3em;
+}
+
+@media only screen and (max-width: 600px){
+  .link{
+    text-align: center;
+    padding: 0.2em 0.05em
+  }
+}
+
+.videoListUl{
+  display: flex;
+  flex-wrap: wrap;
+  margin: 1em;
+  justify-content: space-between;
+  flex-direction: row;
+}
+
+@media only screen and (max-width: 1200px) {
+  .videoListUl{
+    flex-direction: column;
+  }
+}
+
+.videoListLi{
+  margin: 1em;
+  list-style: none;
+  width: 33.33%;
+}
+
+@media only screen and (max-width: 1200px){
+  .videoListLi{
+    align-self: center;
+    width: 50%;
+  }
+}
+
+@media only screen and (max-width: 600px){
+  .videoListLi{
+    width: 90%;
+  }
+}
+
+iframe{
+  width: 100%;
+  width: moz 70%;
+  height: 20em;
+}
+
+.videoListForm{
+  display: flex;
+  flex-direction: column;
+}
+
+.videoListBtn, .videoListInput, .videoListLabel{
+  align-self: center;
+  margin: 1em;
+}
+
+.videoListInput{
+  width: 90%;
+  padding: 1em;
+  background-color: #dddddd;
+}
+
+.videoListBtn{
+  padding: 1em;
 }
